# lyriq

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  setup.py  test.py
.github/workflows/: python-publish.yml  python-tests.yml
examples/: basic_usage.py  database_dumps.py  fetch_by_id.py  format_conversion.py  publishing_lyrics.py  search_lyrics.py  synced_lyrics.py
lyriq/: __init__.py  __main__.py  cli.py  lyriq.py
tests/: __init__.py  test_lyriq.py
