[project]
name = "lyriq"
version = "1.0.3"
description = "A lightweight Python library designed to effortlessly fetch song lyrics."
readme = "README.md"
authors = [
    {name = "TN3W", email = "tn3w@protonmail.com"}
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Sound/Audio",
]
keywords = ["lyrics", "music", "synchronization"]
dependencies = []

[project.scripts]
lyriq = "lyriq.cli:main"

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[project.urls]
Homepage = "https://github.com/tn3w/lyriq"
Documentation = "https://github.com/tn3w/lyriq/blob/main/README.md"
Repository = "https://github.com/tn3w/lyriq.git"
Issues = "https://github.com/tn3w/lyriq/issues"
Changelog = "https://github.com/tn3w/lyriq/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lyriq"]
include-package-data = true

[tool.setuptools.exclude-package-data]
lyriq = ["**/__pycache__/*", "**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=lyriq --cov-report=term-missing -v"

[tool.coverage.run]
source = ["lyriq"]
omit = ["tests/*"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 88
target-version = ["py313"]